fix: Correct alignment of search input, closes #117
BREAKING CHANGE: The default height of the search input is now 36px. Use
the --aa-search-input-height CSS variable to adjust it if needed.

--- a/packages/docusaurus-search-local/src/client/theme/SearchBar/index.css
+++ b/packages/docusaurus-search-local/src/client/theme/SearchBar/index.css
@@ -1,5 +1,5 @@
-.dsla-search-wrapper {
-  margin-left: var(--aa-spacing);
+:root {
+  --aa-search-input-height: 36px;
 }
 
 body.dark,
